package ui.pages;

import com.codeborne.selenide.Condition;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.SelenideElement;
import lombok.Getter;
import ui.enums.errors.ProjectValidationError;

import static com.codeborne.selenide.Selenide.$;

@Getter
public class CreateProjectPage extends BasePage<CreateProjectPage> {

    private final SelenideElement projectNameInput = $(Selectors.byAttribute("data-test", "project-name-input"));

    private final SelenideElement projectIdInput = $(Selectors.byAttribute("data-test", "project-id-input"));

    private final SelenideElement projectDescriptionInput = $(Selectors.byAttribute("aria-label", "Project description"));

    private final SelenideElement createButton = $(Selectors.byText("Create"));

    private final SelenideElement cancelButton = $(Selectors.byText("Cancel"));

    private final SelenideElement projectNameError = $(Selectors.byAttribute("data-test", "project-name-error"));

    private final SelenideElement projectIdError = $(Selectors.byAttribute("data-test", "project-id-error"));


    public CreateProjectPage createProject(String projectName, String projectId, String projectDescription) {
        projectNameInput.setValue(projectName);
        projectIdInput.setValue(projectId);
        projectDescriptionInput.setValue(projectDescription);
        createButton.getWrappedElement().click();
        return this;
    }

    public CreateProjectPage checkProjectNameErrorMessageAppearsOnCreation(ProjectValidationError error) {
        getProjectNameError().shouldBe(Condition.visible)
                .shouldHave(Condition.text(error.getErrorMsg()));
        return this;
    }

    public CreateProjectPage checkProjectIDErrorMessageAppearsOnCreation(ProjectValidationError error) {
        getProjectIdError().shouldBe(Condition.visible)
                .shouldHave(Condition.text(error.getErrorMsg()));
        return this;
    }

    public ProjectsPage cancelProject() {
        cancelButton.click();
        return getPage(ProjectsPage.class);
    }

    @Override
    public String url() {
        return "/projects/create?projectId=_Root&cameFromUrl=/favorite/projects";
    }
}
